Back to use shrinkwrap in tests